--- a/index.html
+++ b/index.html
@@ -106,9 +106,18 @@
             <p>&copy; 2021 All rights reserved</p>
         </div>
     </div>
-
-
-
-
 </body>
 </html>
+
+
+
+
+
+
+echo "# Project-with-BEM" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/fsdarif/Project-with-BEM.git
+git push -u origin main
